# number-guesser

number-guesser/: .gitignore  .mxproject  CMakeLists.txt  number-guesser.ioc  stm32f407vgtx_flash.ld
number-guesser/.cache/clangd/index/: cmsis_compiler.h.FA41602375DCE3DB.idx  cmsis_gcc.h.E20643D100CF159E.idx  cmsis_version.h.A3B997364D9EF5A9.idx  core_cm4.h.A68DE1E518E57364.idx  game.c.9B1ADF0E18C83930.idx  game.h.BE00C75FDFE574A7.idx  gpio.c.4E9152C56D413E8D.idx  gpio.h.C6DDE083DEA8A5B0.idx  main.c.AFC6C056BE4175B6.idx  main.h.BB4E0C0D40E50070.idx  mpu_armv7.h.8A6A6FC39A1EFB51.idx  startup_stm32f407xx.s.30D1F48E7DCCAC34.idx  stm32_hal_legacy.h.7C4AEE91DFEA8B45.idx  stm32f407xx.h.D0A494CC3EBE9F99.idx  stm32f4xx.h.47C369FDE5E90782.idx  stm32f4xx_hal.c.F0ADC8DF0CED657E.idx  stm32f4xx_hal.h.55C1A1A405E55327.idx  stm32f4xx_hal_conf.h.F7931DE8F11EC0DF.idx  stm32f4xx_hal_cortex.c.11C5FAFA24835DE6.idx  stm32f4xx_hal_cortex.h.2924D43D01B660DB.idx  stm32f4xx_hal_def.h.16BBEB4B4BCCDBD6.idx  stm32f4xx_hal_dma.c.E98FBF66BDE95736.idx  stm32f4xx_hal_dma.h.7AB5BE95BD5D5A64.idx  stm32f4xx_hal_dma_ex.c.B84BD73535BE878C.idx  stm32f4xx_hal_dma_ex.h.11801B95358E72F3.idx  stm32f4xx_hal_exti.c.F7D0903A53B62B3E.idx  stm32f4xx_hal_exti.h.90823D39CC79DB44.idx  stm32f4xx_hal_flash.c.C85B30319A2E8DCA.idx  stm32f4xx_hal_flash.h.EB1F395F13D74AEA.idx  stm32f4xx_hal_flash_ex.c.BB97A0BE52FF44F6.idx  stm32f4xx_hal_flash_ex.h.8F9BF2524F6A015C.idx  stm32f4xx_hal_flash_ramfunc.c.1D32CB4C22298FA6.idx  stm32f4xx_hal_flash_ramfunc.h.3C9CEE58F8B31EA9.idx  stm32f4xx_hal_gpio.c.BFA9388A6E2B19C9.idx  stm32f4xx_hal_gpio.h.B88A2ECABBB34CEC.idx  stm32f4xx_hal_gpio_ex.h.E5A83A4BDF82E1F5.idx  stm32f4xx_hal_msp.c.CD7DB51DFCC09084.idx  stm32f4xx_hal_pwr.c.D28673EF8002B49A.idx  stm32f4xx_hal_pwr.h.6556152BC3858F20.idx  stm32f4xx_hal_pwr_ex.c.6E65B1B4291903D1.idx  (+11 more)
number-guesser/Inc/: dwt.h  game.h  keypad.h  lcd.h  main.h
number-guesser/Src/: dwt.c  game.c  gpio.c  keypad.c  lcd.c  main.c
number-guesser/cmake/stm32cubemx/: CMakeLists.txt
